# raft-rs

./: Cargo.toml  README.md  build.rs  kv-server-architecture.md  rustfmt.toml
examples/: accumulator.rs
protos/: raft.proto
src/: lib.rs  main.rs
src/actor/: mod.rs
src/api/: client.rs  commit_stream.rs  configuration.rs  event_bus.rs  factory.rs  grpc.rs  mod.rs  options.rs  placeholder_impl.rs  replicated_log.rs  state_machine.rs  types.rs  wiring.rs
src/commitlog/: api.rs  factory.rs  in_memory.rs  log.rs  mod.rs  storage.rs
src/engine/: mod.rs
src/replica/: commit_log.rs  election.rs  local_state.rs  mod.rs  peer_client.rs  peers.rs  raft_rpcs.rs  replica.rs  replica_api.rs  replica_wiring.rs  router.rs  state_machine.rs  timers.rs  write_ahead_log.rs
src/replica/election/: election_state.rs  leader_state.rs  mod.rs  state_change_listener.rs
src/replica/election/timers/: follower_timer.rs  leader_timer.rs  mod.rs  shared_option.rs  stop_signal.rs  test_utils.rs  time.rs
src/replica/write_ahead_log/: commit_stream.rs  log.rs  log_entry.rs  mod.rs  wiring.rs
src/replica_manager/: mod.rs  replica_manager.rs
src/server/: mod.rs  server.rs  shutdown.rs
tests/: integration_test.rs
