[package]
name = "raft"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx+fridge-dev@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0.0"
thiserror = "1.0.23"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1.42"

tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"
