[package]
name = "raft"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx+fridge-dev@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
bytes = "1.0.0"
chrono = "0.4"
prost = "0.7"
rand = "0.8.3"
slog = "2.7"
slog-async = "2.6"
slog-term = "2.8"
thiserror = "1.0.23"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["time"] }
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
